--- a/public/css/home/home.css
+++ b/public/css/home/home.css
@@ -1,3 +1,25 @@
+body{
+	background-color: #F4F4F4;
+}
+.pace {
+	-webkit-pointer-events: none;
+	pointer-events: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
+}
+.pace-inactive {
+	display: none;
+}
+.pace > .pace-progress {
+	background: #29d;
+	position: fixed;
+	z-index: 9999;
+	top: 0;
+	right: 100%;
+	width: 100%;
+	height: 2px;
+}
 .navbar {
 	min-height: 80px;
 	-webkit-box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.15), 0 1px 5px rgba(0, 0, 0, 0.075);
@@ -80,4 +102,98 @@
 	width: 360px;
 	margin: 0 auto;
 	margin-top: 40px;
+}
+
+.formulario-registro{
+	margin-top: 20px;
+}
+.seccion{
+	background-color: #f9f9f9;
+	padding: 10px;
+	border-top: 1px solid #eeeeee;
+	border-bottom: 1px solid #eeeeee;
+	margin: 0px -10px 10px -10px;
+}
+.divider{
+	height: 1px;
+	background-color: #eeeeee;
+	margin: 10px -10px 10px -10px;
+}
+
+.nav-tabs.process {
+	position: relative;
+	margin-bottom: 0;
+	box-sizing: border-box;
+	background-color: #fff;
+	margin: 20px 0px;
+}
+.nav-tabs.process > .liner{
+	height: 2px;
+	background: #ddd;
+	position: absolute;
+	width: 80%;
+	margin: 0 auto;
+	left: 0;
+	right: 0;
+	top: 50%;
+	z-index: 1;
+}
+.nav-tabs.process span.round-tabs{
+	width: 70px;
+	height: 70px;
+	line-height: 70px;
+	display: inline-block;
+	border-radius: 100px;
+	background: white;
+	z-index: 2;
+	position: absolute;
+	left: 0;
+	text-align: center;
+	font-size: 25px;
+	color: #ddd;
+	border: 2px solid #ddd;
+}
+.nav-tabs.process > li > a{
+	pointer-events: none;
+	cursor: default;
+	margin: 0 auto;
+}
+.nav-tabs.process > li.active > a span.round-tabs{
+	background: #fafafa;
+}
+.nav-tabs > li {
+	width: 20%;
+	border-left: 0px transparent;
+}
+.nav-tabs > li > a{
+	width: 70px;
+	height: 70px;
+	margin: 20px auto;
+	border-radius: 100%;
+	padding: 0;
+}
+@media( max-width : 585px ){
+	span.round-tabs {
+		font-size:16px;
+		width: 50px;
+		height: 50px;
+		line-height: 50px;
+	}
+	.nav-tabs > li a {
+		width: 50px;
+		height: 50px;
+		line-height:50px;
+	}
+}
+.well .tab-content,
+.well .tab-pane{
+	padding: 0px;
+}
+.form-group.has-error{
+	position: relative;
+}
+.help-block.error{
+	position: absolute;
+	font-size: 10px;
+	top: 28px;
 }
